classDiagram
    namespace MoveDomain {

        %% ジョブごとの習得スキル定義
        class JobMoveLearningRule {
            <<Value Object>>
            +Job Job
            +IReadOnlyList~MoveId~ MoveIds
            +ResolveRequiredLevel(order: int, masterLevel: int) int
            +GetLearnableMoveIds(level: int, masterLevel: int) IReadOnlyList~MoveId~
        }

        %% スキルデータ
        class Move {
            <<Aggregate Root>>
            +MoveId Id
            +string Name
            +string Description
            +string? EffectImagePath
            +TargetType TargetType
            +AttackRange AttackRange
            +int MpCost
            +int ExecutionPriority
            +MoveCategory Category
            +IReadOnlyList~MoveEffect~ Effects
            +Validate() void
            +GetOrderedEffects() IReadOnlyList~MoveEffect~
            -ValidateName(name: string) string
            -ValidateEffectImagePath(effectImagePath: string?) string?
            -ValidateMpCost(mpCost: int) int
        }

        class MoveId {
            <<Value Object>>
            +int Id
            -Validate(id: int) int
        }

        class MoveEffect {
            <<Entity>>
            +MoveEffectId EffectId
            +MoveId MoveId
            +int Sequence
            +MoveEffectType EffectType
            +DamageEffect? Damage
            +AilmentEffect? Ailment
            +BuffEffect? Buff
            +ValidateByType() void
            -ValidateOnlyDamage() void
            -ValidateOnlyAilment() void
            -ValidateOnlyBuff() void
            -ValidateSequence(sequence: int) int
        }

        class MoveEffectId {
            <<Value Object>>
            +int Id
            -Validate(id: int) int
        }

        class DamageEffect {
            <<Value Object>>
            +int HitCount
            +decimal PowerRate
            +int FixedValue
            +decimal CriticalRate
            +ElementType ElementType
            +BuffStat? AttackStat
            -ValidateHitCount(hitCount: int) int
            -ValidateFixedValue(fixedValue: int) int
            -ValidateRateRange(value: decimal, paramName: string) decimal
            -ValidateNonNegative(value: decimal, paramName: string) decimal
        }

        class AilmentEffect {
            <<Value Object>>
            +AilmentType AilmentType
            +decimal AilmentRate
            +int AilmentTurns
            +DamageEffect? TriggerDamage
            -ValidateRateRange(value: decimal) decimal
            -ValidateTurns(turns: int) int
            -ValidateTriggerDamage(ailmentType: AilmentType, triggerDamage: DamageEffect?) DamageEffect?
        }

        class BuffEffect {
            <<Value Object>>
            +BuffStat BuffStat
            +BuffCalculationType BuffCalculationType
            +decimal BuffValue
            +int BuffTurns
            +decimal BuffRate
            +bool CanStack
            -ValidateBuffValue(value: decimal, calculationType: BuffCalculationType) decimal
            -ValidateTurns(turns: int) int
            -ValidateRateRange(value: decimal) decimal
        }

        class IMoveRepository {
            +Task~Move?~ GetMoveAsync(moveId: MoveId)
            +Task~IReadOnlyList~Move~~ GetAllMovesAsync()
        }

        class IJobMoveLearningRuleRepository {
            +JobMoveLearningRule GetByJob(job: Job)
        }
    }

    JobMoveLearningRule *-- MoveId : has ordered
    Move *-- MoveId : has
    Move *-- MoveEffect : 1..*
    MoveEffect *-- MoveEffectId : has
    MoveEffect *-- DamageEffect : optional
    MoveEffect *-- AilmentEffect : optional
    AilmentEffect *-- DamageEffect : optional
    MoveEffect *-- BuffEffect : optional
    IMoveRepository ..> Move : loads
    IJobMoveLearningRuleRepository ..> JobMoveLearningRule : returns
